remove unmaintained dark mode, fix checkbox colors

--- a/src/styles/checkbox-large.scss
+++ b/src/styles/checkbox-large.scss
@@ -12,7 +12,7 @@
       width: 1.5rem;
       height: 1.5rem;
       background-color: var(--app-color);
-      border: 2px solid rgba(0, 0, 0, 0.85);
+      border: 2px solid var(--app-text);
       border-radius: 2px;
       padding: 0;
       margin: 0;
@@ -47,7 +47,7 @@
     }
 
     label {
-      color: var(--dark-text);
+      color: var(--app-text);
       font-size: 1.5rem;
       line-height: 1.5rem;
       font-weight: 400;
