--- a/src/styles/checkbox.scss
+++ b/src/styles/checkbox.scss
@@ -16,7 +16,7 @@
     width: 1rem;
     height: 1rem;
     background-color: var(--app-color);
-    border: 2px solid rgba(0, 0, 0, 0.85);
+    border: 2px solid var(--app-text);
     border-radius: 2px;
     padding: 0;
     margin: 0;
@@ -53,7 +53,7 @@
   }
 
   label {
-    color: var(--dark-text);
+    color: var(--app-text);
     font-size: 0.875rem;
     line-height: 1.25rem;
     font-weight: 400;
