--- a/src/styles/material-generic.css
+++ b/src/styles/material-generic.css
@@ -458,7 +458,7 @@ input:focus, textarea:focus, code:focus {
     width: 1rem;
     height: 1rem;
     background-color: var(--app-color);
-    border: 2px solid rgba(0, 0, 0, 0.85);
+    border: 2px solid var(--app-text);
     border-radius: 2px;
     padding: 0;
     margin: 0;
@@ -484,7 +484,7 @@ input:focus, textarea:focus, code:focus {
         text-align: center;
         display: inline-block; }
   .checkbox label {
-    color: var(--dark-text);
+    color: var(--app-text);
     font-size: 0.875rem;
     line-height: 1.25rem;
     font-weight: 400;
@@ -507,7 +507,7 @@ input:focus, textarea:focus, code:focus {
     width: 1.5rem;
     height: 1.5rem;
     background-color: var(--app-color);
-    border: 2px solid rgba(0, 0, 0, 0.85);
+    border: 2px solid var(--app-text);
     border-radius: 2px;
     padding: 0;
     margin: 0;
@@ -533,7 +533,7 @@ input:focus, textarea:focus, code:focus {
         text-align: center;
         display: inline-block; }
   .checkbox.large label {
-    color: var(--dark-text);
+    color: var(--app-text);
     font-size: 1.5rem;
     line-height: 1.5rem;
     font-weight: 400;
